Formulas in the visual editor.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -171,6 +171,7 @@
   "disconnect": "Log Out",
   "disconnected-from-home": "You have been logged out.",
   "discussion-closed": "Discussion is closed",
+  "display-formula": "Display formula",
   "domain": "Domain",
   "domain-already-taken": "Domain is already taken",
   "domain-too-short": "Too short, should be 4 characters at least",
@@ -305,6 +306,7 @@
   "in-blocked-plural": "In blocked",
   "increase-indent": "Increase indent",
   "in-friends": "In friends",
+  "inline-formula": "Inline formula",
   "in-post": "In the post",
   "insert-image": "Insert an image",
   "insert-link": "Insert a link",
