--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -171,6 +171,7 @@
   "disconnect": "Wyloguj",
   "disconnected-from-home": "Zostałeś wylogowany.",
   "discussion-closed": "Dyskusja jest zamknięta",
+  "display-formula": "Formuła wyodrębniona",
   "domain": "Domena",
   "domain-already-taken": "Domena jest już zajęta",
   "domain-too-short": "Za krótka, powinna mieć co najmniej 4 znaki",
@@ -305,6 +306,7 @@
   "in-blocked-plural": "Zablokowani",
   "increase-indent": "Zwiększ wcięcie",
   "in-friends": "W znajomych",
+  "inline-formula": "Formuła w tekście",
   "in-post": "W poście",
   "insert-image": "Wstaw obraz",
   "insert-link": "Wstaw link",
