--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -171,6 +171,7 @@
   "disconnect": "Выйти",
   "disconnected-from-home": "Вы вышли из своего аккаунта.",
   "discussion-closed": "Обсуждение закрыто",
+  "display-formula": "Выделенная формула",
   "domain": "Домен",
   "domain-already-taken": "Домен уже занят",
   "domain-too-short": "Слишком короткий, должен быть минимум 4 символа",
@@ -305,6 +306,7 @@
   "in-blocked-plural": "Заблокировали",
   "increase-indent": "Увеличить отступ",
   "in-friends": "В друзьях",
+  "inline-formula": "Встроенная формула",
   "in-post": "В посте",
   "insert-image": "Вставить картинку",
   "insert-link": "Вставить ссылку",
