--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -171,6 +171,7 @@
   "disconnect": "Вийти",
   "disconnected-from-home": "Ви вийшли зі свого акаунта.",
   "discussion-closed": "Обговорення закрите",
+  "display-formula": "Виокремлена формула",
   "domain": "Домен",
   "domain-already-taken": "Домен вже зайнятий",
   "domain-too-short": "Занадто короткий, має бути мінімум 4 символи",
@@ -305,6 +306,7 @@
   "in-blocked-plural": "Заблокували",
   "increase-indent": "Збільшити відступ",
   "in-friends": "У друзях",
+  "inline-formula": "Вбудована формула",
   "in-post": "У пості",
   "insert-image": "Вставити картинку",
   "insert-link": "Вставити посилання",
