--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -72,6 +72,7 @@
   "change-password-ellipsis": "Zmień hasło...",
   "choose-decision": "Proszę wybrać swoją decyzję...",
   "choose-request": "Wybierz żądanie...",
+  "clear-formatting": "Wyczyść formatowanie",
   "clear-selection": "Wyczyść wybór",
   "client-settings-changed-conflict": "Ustawienia klienta zostały zmienione przez kogoś innego.",
   "clipboard-contains-formatting": "Schowek zawiera tekst z formatowaniem. Czy chcesz wkleić tekst z tagami formatującymi?",
