--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -72,6 +72,7 @@
   "change-password-ellipsis": "Змінити пароль...",
   "choose-decision": "Будь ласка, оберіть рішення...",
   "choose-request": "Виберіть прохання...",
+  "clear-formatting": "Прибрати форматування",
   "clear-selection": "Відмінити вибір",
   "client-settings-changed-conflict": "Налаштування клієнта були кимось змінені.",
   "clipboard-contains-formatting": "Буфер обміну містить текст із форматуванням. Вставити текст із тегами форматування?",
