RichTextEditor/VisualEditor restyled according to the design.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -953,8 +953,8 @@
   "upload-image": "Upload image",
   "uploading-file": "Uploading {progress}% ...",
   "uploading-files": "Uploading {loadedFiles} of {totalFiles} {progress}% ...",
-  "upload-or-copy-images": "<0>Upload images</0> or <1>Copy image</1>",
-  "upload-or-copy-or-drop-images": "<0>Upload images</0> or <1>Copy image</1> or drop them here",
+  "upload-or-copy-images": "<0>Upload Images</0> or <1>Copy Image</1>",
+  "upload-or-copy-or-drop-images": "<0>Upload Images</0> or <1>Copy Image</1><2/>or drag and drop your images here",
   "upload-too-large": "File \"{name}\" cannot be uploaded because its size ({size}) is larger than maximum allowed size ({maxSize})",
   "url": "URL",
   "used-by-addon": "Used by add-on:",
