--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -954,7 +954,7 @@
   "uploading-file": "Загружается {progress}% ...",
   "uploading-files": "Загружается {loadedFiles} из {totalFiles} {progress}% ...",
   "upload-or-copy-images": "<0>Загрузить картинки</0> или <1>Скопировать картинку</1>",
-  "upload-or-copy-or-drop-images": "<0>Загрузить картинки</0> или <1>Скопировать картинку</1> или перетащите их сюда",
+  "upload-or-copy-or-drop-images": "<0>Загрузить картинки</0> или <1>Скопировать картинку</1><2/>или перетащите картинки сюда",
   "upload-too-large": "Файл \"{name}\" не может быть загружен, потому что его размер ({size}) больше максимально разрешенного ({maxSize})",
   "url": "URL",
   "used-by-addon": "Используется дополнением:",
