--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -954,7 +954,7 @@
   "uploading-file": "Надсилається {progress}% ...",
   "uploading-files": "Надсилається {loadedFiles} з {totalFiles} {progress}% ...",
   "upload-or-copy-images": "<0>Надіслати картинки</0> або <1>Скопіювати картинку</1>",
-  "upload-or-copy-or-drop-images": "<0>Надіслати картинки</0> або <1>Скопіювати картинку</1> або перетягніть їх сюди",
+  "upload-or-copy-or-drop-images": "<0>Надіслати картинки</0> або <1>Скопіювати картинку</1><2/>або перетягніть картинки сюди",
   "upload-too-large": "Файл \"{name}\" не може бути надісланий, тому що його розмір ({size}) більший за максимально дозволений ({maxSize})",
   "url": "URL",
   "used-by-addon": "Використовується додатком:",
