Redesigned dropzone in the rich text editor. Intermediate dialog added after selecting files, but before uploading them.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -10,6 +10,7 @@
   "add-friend": "Add to friends",
   "add-friend-group": "Add group of friends",
   "add-group": "Add group",
+  "add-images": "Add images",
   "additional": "Additional",
   "add-me-friend-group": "Add me to the group of friends \"{group}\"",
   "add-me-friends": "Add me to friends",
@@ -165,6 +166,7 @@
   "deny-showing-comment-google-play": "<0>Deny</0> showing the <1>{commentName}</1>'s comment \"{commentHeading}\" to the <1>{postingName}</1>'s post \"{postingHeading}\" on Android (Google Play).",
   "deny-showing-post-google-play": "<0>Deny</0> showing the <1>{name}</1>'s post \"{heading}\" on Android (Google Play).",
   "description": "Description",
+  "description-optional": "Description (optional)",
   "details": "Details",
   "details-blocking": "Details of blocking",
   "details-blocking-by-name": "Details of blocking by {name}",
