--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -10,6 +10,7 @@
   "add-friend": "Dodaj do znajomych",
   "add-friend-group": "Dodaj grupę znajomych",
   "add-group": "Dodaj grupę",
+  "add-images": "Dodaj obrazy",
   "additional": "Dodatkowe",
   "add-me-friend-group": "Dodaj mnie do grupy znajomych \"{group}\"",
   "add-me-friends": "Dodaj mnie do znajomych",
@@ -165,6 +166,7 @@
   "deny-showing-comment-google-play": "<0>Odmów</0> wyświetlaniu komentarza <1>{commentName}</1> „{commentHeading}” do posta <1>{postingName}</1> „{postingHeading}” na Androidzie (Google Play).",
   "deny-showing-post-google-play": "<0>Odmów</0> wyświetlaniu postu <1>{name}</1> „{heading}” na Androidzie (Google Play).",
   "description": "Opis",
+  "description-optional": "Opis (opcjonalnie)",
   "details": "Szczegóły",
   "details-blocking": "Szczegóły blokowania",
   "details-blocking-by-name": "Szczegóły blokowania przez {name}",
