--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -10,6 +10,7 @@
   "add-friend": "Добавить в друзья",
   "add-friend-group": "Добавить группу друзей",
   "add-group": "Добавить группу",
+  "add-images": "Добавить картинки",
   "additional": "Дополнительные",
   "add-me-friend-group": "Добавить меня в группу друзей \"{group}\"",
   "add-me-friends": "Добавить меня в друзья",
@@ -165,6 +166,7 @@
   "deny-showing-comment-google-play": "<0>Запретить</0> показ комментария <1>{commentName}</1> \"{commentHeading}\" к посту <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
   "deny-showing-post-google-play": "<0>Запретить</0> показ поста <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "description": "Описание",
+  "description-optional": "Описание (необязательно)",
   "details": "Подробности",
   "details-blocking": "Подробности блокировки",
   "details-blocking-by-name": "Подробности блокировки со стороны {name}",
