--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -10,6 +10,7 @@
   "add-friend": "Додати у друзі",
   "add-friend-group": "Додати групу друзів",
   "add-group": "Додати групу",
+  "add-images": "Додати картинки",
   "additional": "Додаткові",
   "add-me-friend-group": "Додати мене до групи друзів \"{group}\"",
   "add-me-friends": "Додати мене до друзів",
@@ -165,6 +166,7 @@
   "deny-showing-comment-google-play": "<0>Заборонити</0> показ коментаря <1>{commentName}</1> \"{commentHeading}\" до поста <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
   "deny-showing-post-google-play": "<0>Заборонити</0> показ посту <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "description": "Опис",
+  "description-optional": "Опис (за бажанням)",
   "details": "Подробиці",
   "details-blocking": "Подробиці блокування",
   "details-blocking-by-name": "Подробиці блокування з боку {name}",
