If no text is selected in the editor, make it possible to enter link text in RichTextLinkDialog.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -913,6 +913,7 @@
   "text-copied": "Text copied to the clipboard",
   "text-formatting": "Text formatting",
   "text-only": "Text only",
+  "text-optional": "Text (optional)",
   "title": "Title",
   "token-copied": "Token copied to the clipboard",
   "token-name": "Token name",
@@ -958,7 +959,6 @@
   "upload-or-copy-images": "<0>Upload Images</0> or <1>Copy Image</1>",
   "upload-or-copy-or-drop-images": "<0>Upload Images</0> or <1>Copy Image</1><2/>or drag and drop your images here",
   "upload-too-large": "File \"{name}\" cannot be uploaded because its size ({size}) is larger than maximum allowed size ({maxSize})",
-  "url": "URL",
   "used-by-addon": "Used by add-on:",
   "user-asks-not-publish-complaint": "User asks not to publish the complaint",
   "user-comments-hidden": "This user's comments are hidden",
