--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -913,6 +913,7 @@
   "text-copied": "Текст скопирован в буфер обмена",
   "text-formatting": "Форматирование текста",
   "text-only": "Только текст",
+  "text-optional": "Текст (необязательно)",
   "title": "Заголовок",
   "token-copied": "Токен скопирован в буфер обмена",
   "token-name": "Имя токена",
@@ -958,7 +959,6 @@
   "upload-or-copy-images": "<0>Загрузить картинки</0> или <1>Скопировать картинку</1>",
   "upload-or-copy-or-drop-images": "<0>Загрузить картинки</0> или <1>Скопировать картинку</1><2/>или перетащите картинки сюда",
   "upload-too-large": "Файл \"{name}\" не может быть загружен, потому что его размер ({size}) больше максимально разрешенного ({maxSize})",
-  "url": "URL",
   "used-by-addon": "Используется дополнением:",
   "user-asks-not-publish-complaint": "Пользователь просит не публиковать эту жалобу",
   "user-comments-hidden": "Комментарии этого пользователя скрываются",
