--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -913,6 +913,7 @@
   "text-copied": "Текст скопійований до буфера обміну",
   "text-formatting": "Форматування текста",
   "text-only": "Тільки текст",
+  "text-optional": "Текст (за бажанням)",
   "title": "Заголовок",
   "token-copied": "Токен скопійований до буфера обміну",
   "token-name": "Ім'я токена",
@@ -958,7 +959,6 @@
   "upload-or-copy-images": "<0>Надіслати картинки</0> або <1>Скопіювати картинку</1>",
   "upload-or-copy-or-drop-images": "<0>Надіслати картинки</0> або <1>Скопіювати картинку</1><2/>або перетягніть картинки сюди",
   "upload-too-large": "Файл \"{name}\" не може бути надісланий, тому що його розмір ({size}) більший за максимально дозволений ({maxSize})",
-  "url": "URL",
   "used-by-addon": "Використовується додатком:",
   "user-asks-not-publish-complaint": "Користувач просить не публікувати цю скаргу",
   "user-comments-hidden": "Коментарі цього користувача приховуються",
