--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -913,6 +913,7 @@
   "text-copied": "Tekst skopiowany do schowka",
   "text-formatting": "Formatowanie tekstu",
   "text-only": "Tylko tekst",
+  "text-optional": "Tekst (opcjonalnie)",
   "title": "Tytuł",
   "token-copied": "Token skopiowany do schowka",
   "token-name": "Nazwa tokenu",
@@ -958,7 +959,6 @@
   "upload-or-copy-images": "<0>Wgraj obrazy</0> lub <1>Skopiuj obraz</1>",
   "upload-or-copy-or-drop-images": "<0>Wgraj obrazy</0> lub <1>Skopiuj obraz</1><2/>lub przeciągnij swoje obrazy tutaj",
   "upload-too-large": "Plik \"{name}\" nie może zostać wgrany, ponieważ jego rozmiar ({size}) jest większy niż maksymalny dozwolony rozmiar ({maxSize})",
-  "url": "URL",
   "used-by-addon": "Używane przez dodatek:",
   "user-asks-not-publish-complaint": "Użytkownik prosi o niepublikowanie niniejszej skargi",
   "user-comments-hidden": "Komentarze tego użytkownika są ukryte",
