Clearer icon and text for embedding video in the visual editor.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -122,7 +122,7 @@
   "content-unhidden-in-google-play": "All content is unhidden in Android (Google Play)",
   "continue-reading": "Continue Reading →",
   "copy": "Copy",
-  "copy-embedding-video-code": "Copy video \"Embed\" code from YouTube, Rumble etc. and paste it here",
+  "copy-embedding-video-code": "Copy \"Embed video\" code from YouTube, Rumble etc. and paste it here",
   "copy-image-from-internet": "Copy Image From Internet",
   "copy-image-link": "Copy image link",
   "copy-link": "Copy link",
