--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -122,7 +122,7 @@
   "content-unhidden-in-google-play": "Весь контент раскрыт в Android (Google Play)",
   "continue-reading": "Читать дальше →",
   "copy": "Копировать",
-  "copy-embedding-video-code": "Скопируйте код «Встроить» видео с YouTube, Rumble и т.д. и вставьте его сюда",
+  "copy-embedding-video-code": "Скопируйте код «Встроить видео» с YouTube, Rumble и т.д. и вставьте его сюда",
   "copy-image-from-internet": "Копировать картинку из Интернета",
   "copy-image-link": "Копировать ссылку на картинку",
   "copy-link": "Копировать ссылку",
