Inserting remote images in the visual editor. Simplified RichTextImageDialog.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -23,8 +23,6 @@
   "allow-showing-blog-google-play": "<0>Zezwalaj</0> na wyświetlanie bloga <1>{name}</1> na Androidzie (Google Play).",
   "allow-showing-comment-google-play": "<0>Zezwalaj</0> na wyświetlanie na Androidzie komentarza użytkownika <1>{commentName}</1> „{commentHeading}” do posta użytkownika <1>{postingName}</1> „{postingHeading}” (Google Play).",
   "allow-showing-post-google-play": "<0>Zezwalaj</0> na wyświetlanie posta użytkownika <1>{name}</1> „{heading}” na Androidzie (Google Play).",
-  "alt-text": "Tekst alternatywny",
-  "alt-text-button": "Tekst alternatywny",
   "application-name": "Nazwa aplikacji",
   "ask": "Zapytaj",
   "ask-count": "Zapytaj {count} {count, plural, one {użytkownika} few {użytkowników} many {użytkowników} other {użytkowników}}",
@@ -61,7 +59,7 @@
   "cancel": "Anuluj",
   "cancel-request": "Anuluj żądanie",
   "cannot-resolve-name ": "Nie można rozwiązać nazwy:",
-  "caption": "Podpis",
+  "caption-optional": "Podpis pod obrazkiem (opcjonalnie)",
   "careful-grant-access": "Proszę zachować ostrożność i nie udzielać dostępu aplikacjom, których nie znasz.",
   "change": "Zmień",
   "change-date-time": "Zmień datę/czas",
@@ -289,13 +287,7 @@
   "i-agree": "Zgadzam się",
   "ignore": "Ignoruj",
   "image": "Obrazek",
-  "image-alignment": {
-    "center": "Wyśrodkuj",
-    "left": "Do lewej",
-    "left-wrap": "Do lewej, zawijając tekst",
-    "right": "Do prawej",
-    "right-wrap": "Do prawej, zawijając tekst"
-  },
+  "image-internet": "Obraz z Internetu",
   "image-size": {
     "custom": "Niestandardowy...",
     "full": "Pełny",
@@ -314,7 +306,6 @@
   "insert-image": "Wstaw obraz",
   "insert-link": "Wstaw link",
   "insert-mention": "Wstaw wzmiankę",
-  "insert-video": "Wstaw wideo",
   "instants": "Powiadomienia",
   "instant-summary": {
     "and": "i",
@@ -919,7 +910,6 @@
   "token-name": "Nazwa tokenu",
   "token-usage-warning": "Prosimy pamiętać, że token daje dostęp do bloga. Nigdy nie udostępniaj go osobom, którym nie ufasz!",
   "too-long": "Zbyt długi",
-  "tooltip": "Podpowiedź",
   "top": "Góra",
   "to-post": "← Post",
   "total-colon": "Całkowite",
@@ -964,6 +954,7 @@
   "user-comments-hidden": "Komentarze tego użytkownika są ukryte",
   "validating-access-request": "Weryfikacja żądania dostępu",
   "verify-signature": "Zweryfikuj podpis",
+  "video-internet": "Wideo z Internetu",
   "view-as-chart": "Wyświetl jako wykres",
   "view-as-list": "Wyświetl jako listę",
   "view-comments": "Wyświetl komentarze",
