--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -23,8 +23,6 @@
   "allow-showing-blog-google-play": "<0>Разрешить</0> показ блога <1>{name}</1> на Android (Google Play).",
   "allow-showing-comment-google-play": "<0>Разрешить</0> показ комментария <1>{commentName}</1> \"{commentHeading}\" к посту <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
   "allow-showing-post-google-play": "<0>Разрешить</0> показ поста <1>{name}</1> \"{heading}\" на Android (Google Play).",
-  "alt-text": "Альтернативный текст",
-  "alt-text-button": "Альт. текст",
   "application-name": "Имя приложения",
   "ask": "Попросить",
   "ask-count": "Попросить {count} {count, plural, one {пользователя} other {пользователей}}",
@@ -61,7 +59,7 @@
   "cancel": "Отмена",
   "cancel-request": "Отменить запрос",
   "cannot-resolve-name ": "Не удалось опознать имя:",
-  "caption": "Заголовок",
+  "caption-optional": "Подпись под картинкой (необязательно)",
   "careful-grant-access": "Пожалуйста, будьте осторожны и не предоставляйте доступ незнакомым приложениям.",
   "change": "Изменить",
   "change-date-time": "Изменить дату/время",
@@ -289,13 +287,7 @@
   "i-agree": "Я {gender, select, female {согласна} other {согласен}}",
   "ignore": "Игнорировать",
   "image": "Картинка",
-  "image-alignment": {
-    "center": "По центру",
-    "left": "Слева",
-    "left-wrap": "Слева, обтекание текстом",
-    "right": "Справа",
-    "right-wrap": "Справа, обтекание текстом"
-  },
+  "image-internet": "Картинка из Интернета",
   "image-size": {
     "custom": "Любой...",
     "full": "Полный",
@@ -314,7 +306,6 @@
   "insert-image": "Вставить картинку",
   "insert-link": "Вставить ссылку",
   "insert-mention": "Вставить упоминание",
-  "insert-video": "Вставить видео",
   "instants": "Уведомления",
   "instant-summary": {
     "and": "и",
@@ -919,7 +910,6 @@
   "token-name": "Имя токена",
   "token-usage-warning": "Имейте в виду, что токен даёт доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
   "too-long": "Слишком длинно",
-  "tooltip": "Подсказка",
   "top": "В конец",
   "to-post": "← Пост",
   "total-colon": "Всего:",
@@ -964,6 +954,7 @@
   "user-comments-hidden": "Комментарии этого пользователя скрываются",
   "validating-access-request": "Проверка запроса на доступ",
   "verify-signature": "Проверить подпись",
+  "video-internet": "Видео из Интернета",
   "view-as-chart": "В виде диаграммы",
   "view-as-list": "В виде списка",
   "view-comments": "Показать комментарии",
