--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -23,8 +23,6 @@
   "allow-showing-blog-google-play": "<0>Дозволити</0> показ блогу <1>{name}</1> на Android (Google Play).",
   "allow-showing-comment-google-play": "<0>Дозволити</0> показ коментаря <1>{commentName}</1> \"{commentHeading}\" до поста <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
   "allow-showing-post-google-play": "<0>Дозволити</0> показ посту <1>{name}</1> \"{heading}\" на Android (Google Play).",
-  "alt-text": "Альтернативний текст",
-  "alt-text-button": "Альт. текст",
   "application-name": "Ім'я додатку",
   "ask": "Попросити",
   "ask-count": "Попросити {count} {count, plural, one {користувача} other {користувачів}}",
@@ -61,7 +59,7 @@
   "cancel": "Відмінити",
   "cancel-request": "Скасувати запит",
   "cannot-resolve-name ": "Не вдалося розпізнати ім'я:",
-  "caption": "Заголовок",
+  "caption-optional": "Підпис під картинкою (за бажанням)",
   "careful-grant-access": "Будь ласка, будьте обережні та не надавайте доступ незнайомим додаткам.",
   "change": "Змінити",
   "change-date-time": "Змінити дату/час",
@@ -289,13 +287,7 @@
   "i-agree": "Я погоджуюсь",
   "ignore": "Ігнорувати",
   "image": "Картинка",
-  "image-alignment": {
-    "center": "По центру",
-    "left": "Зліва",
-    "left-wrap": "Зліва, обтікання текстом",
-    "right": "Справа",
-    "right-wrap": "Справа, обтікання текстом"
-  },
+  "image-internet": "Картинка з Інтернету",
   "image-size": {
     "custom": "Будь-який...",
     "full": "Повний",
@@ -314,7 +306,6 @@
   "insert-image": "Вставити картинку",
   "insert-link": "Вставити посилання",
   "insert-mention": "Вставити згадку",
-  "insert-video": "Вставити відео",
   "instants": "Повідомлення",
   "instant-summary": {
     "and": "та",
@@ -919,7 +910,6 @@
   "token-name": "Ім'я токена",
   "token-usage-warning": "Майте на увазі, що токен дає доступ до вашого блогу з правами адміністратора. Ніколи не передавайте його тому, кому ви не довіряєте!",
   "too-long": "Занадто довго",
-  "tooltip": "Підказка",
   "top": "У кінець",
   "to-post": "← Пост",
   "total-colon": "Всього:",
@@ -964,6 +954,7 @@
   "user-comments-hidden": "Коментарі цього користувача приховуються",
   "validating-access-request": "Перевірка запиту на доступ",
   "verify-signature": "Перевірити підпис",
+  "video-internet": "Відео з Інтернету",
   "view-as-chart": "У вигляді діаграми",
   "view-as-list": "У вигляді списку",
   "view-comments": "Показати коментарі",
