--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -23,8 +23,6 @@
   "allow-showing-blog-google-play": "<0>Allow</0> showing the blog <1>{name}</1> on Android (Google Play).",
   "allow-showing-comment-google-play": "<0>Allow</0> showing the <1>{commentName}</1>'s comment \"{commentHeading}\" to the <1>{postingName}</1>'s post \"{postingHeading}\" on Android (Google Play).",
   "allow-showing-post-google-play": "<0>Allow</0> showing the <1>{name}</1>'s post \"{heading}\" on Android (Google Play).",
-  "alt-text": "Alternative text",
-  "alt-text-button": "Alt text",
   "application-name": "Application name",
   "ask": "Ask",
   "ask-count": "Ask {count} {count, plural, one {user} other {users}}",
@@ -61,7 +59,7 @@
   "cancel": "Cancel",
   "cancel-request": "Cancel the request",
   "cannot-resolve-name ": "Cannot resolve name:",
-  "caption": "Caption",
+  "caption-optional": "Caption under the image (optional)",
   "careful-grant-access": "Please be careful and don't grant access to any application you're not familiar with.",
   "change": "Change",
   "change-date-time": "Change Date/Time",
@@ -289,13 +287,7 @@
   "i-agree": "I agree",
   "ignore": "Ignore",
   "image": "Image",
-  "image-alignment": {
-    "center": "Center",
-    "left": "Left",
-    "left-wrap": "Left, wrapping text",
-    "right": "Right",
-    "right-wrap": "Right, wrapping text"
-  },
+  "image-internet": "Image from the Internet",
   "image-size": {
     "custom": "Custom...",
     "full": "Full",
@@ -314,7 +306,6 @@
   "insert-image": "Insert an image",
   "insert-link": "Insert a link",
   "insert-mention": "Insert a mention",
-  "insert-video": "Insert video",
   "instants": "Notifications",
   "instant-summary": {
     "and": "and",
@@ -919,7 +910,6 @@
   "token-name": "Token name",
   "token-usage-warning": "Please note that the token gives admin access to your blog. Never give it to anybody you don't trust!",
   "too-long": "Too long",
-  "tooltip": "Tooltip",
   "top": "Top",
   "to-post": "← Post",
   "total-colon": "Total:",
@@ -964,6 +954,7 @@
   "user-comments-hidden": "This user's comments are hidden",
   "validating-access-request": "Validating access request",
   "verify-signature": "Verify signature",
+  "video-internet": "Video from the Internet",
   "view-as-chart": "View as chart",
   "view-as-list": "View as list",
   "view-comments": "View comments",
