--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -242,7 +242,6 @@
   "forget-unfinished-comment": "Вы действительно хотите забыть незавершенный комментарий?",
   "forgot-home-password": "Забыл домашний пароль",
   "forgot-password": "Забыл пароль",
-  "formatting-hint": "<0>Markdown:</0> загляните в <1>шпаргалку</1> или <2>учебник</2>, чтобы узнать о других возможностях. См. также <3>шпаргалку по эмодзи</3>.",
   "formula": "Формула",
   "friend": "Друг",
   "friend-groups": "Группы друзей...",
@@ -856,7 +855,6 @@
     "unlawful": "Нарушение закона"
   },
   "sheriff-order-sent": "Приказ шерифа отправлен",
-  "show-formatting-hint": "Показать подсказку по форматированию",
   "show-hidden-comments": "Показать скрытые комментарии",
   "show-list-reactions": "Показывать список реакций",
   "show-number-reactions": "Показывать число реакций",
@@ -975,6 +973,7 @@
   "want-set-right-now-click-circle": "Хотите установить её прямо сейчас? Нажмите на кружок.",
   "want-turn-off-story-type": "Вы действительно хотите выключить {type}?",
   "welcome": "Привет!",
+  "whats-new": "Что у вас нового?",
   "where-from": "Откуда он взят?",
   "where-go": "Куда вы хотите пойти?",
   "why-delete-blog": "Почему вы удаляете блог? (необязательно)",
