--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -242,7 +242,6 @@
   "forget-unfinished-comment": "Ви дійсно бажаєте забути незавершений коментар?",
   "forgot-home-password": "Забув домашній пароль",
   "forgot-password": "Забув пароль",
-  "formatting-hint": "<0>Markdown:</0> зазирніть у <1>шпаргалку</1> чи <2>підручник</2>, щоб дізнатися про інші можливості. Див. також <3>шпаргалку з емодзі</3>.",
   "formula": "Формула",
   "friend": "Друг",
   "friend-groups": "Групи друзів...",
@@ -856,7 +855,6 @@
     "unlawful": "Порушення закону"
   },
   "sheriff-order-sent": "Наказ шерифа надіслано",
-  "show-formatting-hint": "Показати підказку щодо форматування",
   "show-hidden-comments": "Показати приховані коментарі",
   "show-list-reactions": "Показувати список реакцій",
   "show-number-reactions": "Показувати кількість реакцій",
@@ -975,6 +973,7 @@
   "want-set-right-now-click-circle": "Хочете встановити його прямо зараз? Натисніть на кружечок.",
   "want-turn-off-story-type": "Ви дійсно бажаєте вимкнути {type}",
   "welcome": "Вітаю!",
+  "whats-new": "Що у вас нового?",
   "where-from": "Звідки його взято?",
   "where-go": "Куди ви бажаєте піти?",
   "why-delete-blog": "Чому ви видаляєте блог? (за бажанням)",
