--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -981,7 +981,7 @@
   "why-not-set-full-name": "<0>Ещё не установили полное имя?</0> Красивое полное имя будет появляться в ваших постах и комментариях вместо имени пользователя. Например, вместо <1>{name}</1> будет написано <1>{full}</1>. Это может быть ваше настоящее имя или любое другое, которое вам нравится. И его можно будет сменить в любой момент.",
   "width": "Ширина",
   "write-anything": "Пишите что угодно...",
-  "write-comment-here": "Напишите тут комментарий для {mention}...",
+  "write-comment": "Напишите комментарий...",
   "write-down-secret-words": "<0>Запишите секретные слова.</0> С помощью этих слов вы сможете, при необходимости, перенести свой блог на другой сервер, сохранив имя и все социальные связи. Скопируйте эти слова и положите в безопасное место. Удалите их с сервера, чтобы они остались только у вас.",
   "write-down-words": "<0>Пожалуйста, запишите, сохраните в файл или распечатайте эти слова и храните их в безопасном месте.</0><1>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</1><2>Они вам понадобятся для любых операций с именем ‘{name}’.</2>",
   "written-down-delete-words": "Записано. Удали слова с сервера",
