--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -981,7 +981,7 @@
   "why-not-set-full-name": "<0>Ще не встановили повне ім'я?</0> Гарне повне ім'я буде з'являтися у ваших постах і коментарях замість імені користувача. Наприклад, замість <1>{name}</1> буде написано <1>{full}</1>. Це може бути ваше справжнє ім'я або будь-яке інше, яке вам подобається. І його можна буде змінити в будь-який момент.",
   "width": "Ширина",
   "write-anything": "Пишіть що завгодно...",
-  "write-comment-here": "Напишіть тут коментар для {mention}...",
+  "write-comment": "Напишіть коментар...",
   "write-down-secret-words": "<0>Запишіть секретні слова.</0> За допомогою цих слів ви зможете, у разі необхідності, перенести свій блог на інший сервер, зберігши ім'я та всі соціальні зв'язки. Скопіюйте ці слова та покладіть у безпечне місце. Видаліть їх із сервера, щоб вони залишилися тільки у вас.",
   "write-down-words": "<0>Будь ласка, запишіть, збережіть у файл або роздрукуйте ці слова і зберігайте їх у безпечному місці.</0><1>Якщо ви втратите ці слова, їх неможливо буде відновити, і ви повністю втратите контроль над вашим зареєстрованим ім'ям.</1><2>Вони вам знадобляться для будь-яких операцій з ім'ям ‘{name}’.</2>",
   "written-down-delete-words": "Записано. Видали слова з сервера",
