Text formatting menu for the comment composer. Expandable submenus.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -391,6 +391,7 @@
   "login-incorrect": "Blog name or password is incorrect",
   "male": "Male",
   "male-short": "m.",
+  "mark": "Mark",
   "mark-all-read": "Mark All as Read",
   "mark-read": "Mark as Read",
   "mark-unread": "Mark as Unread",
