--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -391,6 +391,7 @@
   "login-incorrect": "Nazwa bloga lub hasło są nieprawidłowe",
   "male": "Mężczyzna",
   "male-short": "m.",
+  "mark": "Zaznacz",
   "mark-all-read": "Oznacz wszystko jako przeczytane",
   "mark-read": "Oznacz jako przeczytane",
   "mark-unread": "Oznacz jako nieprzeczytane",
