--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -391,6 +391,7 @@
   "login-incorrect": "Неверное имя блога или пароль",
   "male": "Мужской",
   "male-short": "м.",
+  "mark": "Отметить",
   "mark-all-read": "Все прочитаны",
   "mark-read": "Отметить как прочитанное",
   "mark-unread": "Отметить как непрочитанное",
