--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -391,6 +391,7 @@
   "login-incorrect": "Неправильне ім'я блога або пароль",
   "male": "Чоловічий",
   "male-short": "ч.",
+  "mark": "Позначити",
   "mark-all-read": "Усі прочитані",
   "mark-read": "Позначити як прочитане",
   "mark-unread": "Позначити як непрочитане",
